# usefull

./: .env.dev  .gitignore  Dockerfile  Dockerfile.prod  README.md  chat_doc.md  docker-compose.collab.yml  docker-compose.prod.yml  docker-compose.yml  dumpdata.json  enntrypoint.sh  pyproject.toml
config/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
src/: routers.py
src/achievements/: admin.py  apps.py  models.py  serializers.py
src/auth/: base_auth.py  schemas.py  views.py
src/base/: classes.py  middleware.py  permissions.py  send_mail.py  serializers.py  validators.py
src/chat/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  services.py  tests.py  urls.py  views.py
src/comments/: apps.py  models.py
src/course/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
src/dashboard/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/feed/: apps.py  services.py  tests.py  urls.py
src/followers/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
src/profiles/: admin.py  apps.py  auth_backend.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
src/repository/: admin.py  apps.py  models.py  schemas.py  services.py  utils.py  views.py
src/support/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
src/team/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
src/team_chat/: apps.py  urls.py  views.py
src/wall/: admin.py  apps.py  models.py  serializers.py  tests.py  (+3 more)
(+9 files in other folders)
